--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 asgiref==3.5.2
-backports.zoneinfo==0.2.1;python_version<"3.9"
+backports.zoneinfo==0.2.1
 Django==4.1
 django-cors-headers==3.13.0
 django-filter==22.1
 djangorestframework==3.13.1
 gunicorn==20.1.0
+psycopg2-binary==2.9.3
 python-decouple==3.6
 pytz==2022.1
 sqlparse==0.4.2
